--- a/view/comp/footer.hbs
+++ b/view/comp/footer.hbs
@@ -1,6 +1,14 @@
-<div class="faq">Демухаметов Павел Насипович</div>
-<div class="contact">
-  <a href="#" target="_blank"><img class="align-text-center img-fluid" src="https://cdn-icons-png.flaticon.com/512/3536/3536661.png "></a>
-  <a href="#" target="_blank"><img class="align-text-center img-fluid" src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png "></a>
-  <a href="#" target="_blank"><img class="align-text-center img-fluid" src="https://cdn-icons-png.flaticon.com/512/5968/5968835.png"></a>
+<div class="container d-flex justify-content-between">
+  <div class="about font-weight-bold">Сaгадеев Артур</div>
+  <div class="base">
+    <a href=""
+      ><img src="https://avatars.mds.yandex.net/i?id=e950afd124a8c7f60fd6979339405e233ed761eb-9214528-images-thumbs&n=13" alt="vk" class="icons"
+    /></a>
+    <a href=""
+      ><img src="https://e1.pngegg.com/pngimages/209/911/png-clipart-macos-app-icons-instagram.png" alt="instagram" class="icons"
+    /></a>
+    <a href=""
+      ><img src="https://www.clipartmax.com/png/middle/135-1352882_png-format-twitter-logo-transparent.png" alt="twitter" class="icons"
+    /></a>
+  </div>
 </div>
