--- a/src/view/comp/header.hbs
+++ b/src/view/comp/header.hbs
@@ -6,5 +6,5 @@
             <p class="amogus">Сад теней</p>
         </a>
     </div>
-    <button type="button" class="Atomic" id="toastbtn">Atomic</button>
+    <button type="button" class="Atomic" data-toggle="modal" data-target="#new-card-modal" id="toastbtn">Atomic</button>
 </div>
