--- a/src/view/comp/modal_new.hbs
+++ b/src/view/comp/modal_new.hbs
@@ -1,4 +1,4 @@
-<div class="modal fade" id="new-card-modal" tabindex="-1" aria-labelledby="new-card-modal-label" aria-hidden="true">
+<div class="modal fade" id="new-card-modal" tabindex="-1" role="dialog" aria-labelledby="new-card-modal-label" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
