--- a/src/modal.hbs
+++ b/src/modal.hbs
@@ -6,7 +6,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form id="card-form">
+        <form id="card-form" action="http://rhp/src/update.php">
+        <input type="hidden" name="id_update" id="id_update" value="">
           <div class="mb-3">
             <label for="img" class="form-label">Картинка</label>
             <input type="text" class="form-control" id="img" name="img">
@@ -19,14 +20,16 @@
             <label for="description" class="form-label">Описание</label>
             <textarea class="form-control" id="description" name="description"></textarea>
           </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default btn-prev slide-btn"> << </button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+              {{!-- <button type="button" class="btn btn-primary" id="save-button" data-bs-dismiss="modal" >Сохранить</button> --}}
+              <input type="submit" class="btn btn-primary" if="save-button" data-bs-dismiss="modal" value="Сохранить">
+              <button type="button" class="btn btn-default btn-next slide-btn"> >> </button>
+            </div>
         </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-prev slide-btn"> << </button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-        <button type="button" class="btn btn-primary" id="save-button" data-bs-dismiss="modal" >Сохранить</button>
-        <button type="button" class="btn btn-default btn-next slide-btn"> >> </button>
-      </div>
+
     </div>
   </div>
 </div>
